--- a/flower.css
+++ b/flower.css
@@ -1,6 +1,6 @@
 html {
        background-color: rgb(32, 114, 18);
-       background-image: url("../Grass.jpg");
+       background-image: url("Grass.jpg");
        background-repeat: repeat;
        overflow: hidden;  
         box-shadow: inset 0 0 200px rgba(255, 255, 255, 0.9);
@@ -49,3 +49,4 @@ html {
     text-justify: inter-word;
     color: rgb(255, 255, 255);
 }
+
