--- a/flower.css
+++ b/flower.css
@@ -3,8 +3,10 @@ html {
        background-image: url("Grass.jpg");
        background-repeat: repeat;
        overflow: hidden;  
-       height: 100%;
+       max-height: 100%;
+       max-width: 100%
        box-shadow: inset 0 0 200px rgba(255, 255, 255, 0.9);
+       
 
 }
 
@@ -50,5 +52,6 @@ html {
     text-justify: inter-word;
     color: rgb(255, 255, 255);
 }
+
 
 
