--- a/flower.css
+++ b/flower.css
@@ -2,10 +2,10 @@ html {
        background-color: rgb(32, 114, 18);
        background-image: url("Grass.jpg");
        background-repeat: repeat;
-       overflow: hidden;  
+       overflow: hidden; 
+       overflow-y: hidden;
        max-height: 100%;
-       max-width: 100%
-       box-shadow: inset 0 0 200px rgba(255, 255, 255, 0.9);
+       background-size: cover;
        
 
 }
@@ -52,6 +52,7 @@ html {
     text-justify: inter-word;
     color: rgb(255, 255, 255);
 }
+
 
 
 
